# ProgrammingTechnologiesOpenCL

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  matrix_multiplication.cpp  simplified structure.xml  trivial.c  trivial.cpp
docs/: files.html  files.js  globals.html  globals_defs.html  globals_func.html  index.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html
docs/d3/dcc/: md__r_e_a_d_m_e.html
docs/d4/d66/: group__trivial__cpp__group.html  group__trivial__cpp__group.js
docs/d5/dda/: matrix__multiplication_8cpp.html  matrix__multiplication_8cpp.js  matrix__multiplication_8cpp_source.html
docs/d6/d79/: trivial_8cpp.html  trivial_8cpp.js  trivial_8cpp_source.html
docs/d7/d97/: trivial_8c.html  trivial_8c.js  trivial_8c_source.html
docs/d9/d13/: group__matrix__multiplication.html  group__matrix__multiplication.js
docs/d9/dd6/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html
docs/db/d14/: group__trivial__c__group.html  group__trivial__c__group.js
docs/dd/da0/: todo.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  groups_0.js  pages_0.js  pages_1.js  searchdata.js
documentation/: files.html  globals.html  globals_defs.html  globals_func.html  index.html
documentation/d6/d79/: trivial_8cpp.html  trivial_8cpp_source.html
documentation/d7/d97/: trivial_8c.html  trivial_8c_source.html
documentation/search/: all_3.js  defines_0.js  functions_0.js  functions_1.js  searchdata.js
